app-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-lb
  namespace: chris-example
spec:
  selector:
    app: httpbin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
