app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: chris-example
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: app-lb
          servicePort: 80
        path: /
  tls:
  - hosts:
    - example.com
